# fixo

./: README.md  main.py  pyproject.toml
fixo/: __main__.py  data.py  edit.py  edits.py  importer.py  io.py  load.py  message.py  pyright.py  rule.py  token_edit.py  type_edit.py
fixo/blocks/: __init__.py  block.py  blocks.py  imports.py  python_file.py
fixo/rules/: __init__.py  pyrefly.py  pyright.py  rules.py
fixo/tokens/: __init__.py  argument_parser.py  block.py  blocks.py  file_linter.py  import_line.py  imports.py  python_file.py
test/: full-out.json  rules.json  sample_code.out.py  sample_code.py  sample_code.pyrefly.json  sample_code.pyright.json  test_edit.py  test_functional.py  test_import_line.py  test_imports.py  test_rules.py
