[project]
name = "fixo"
version = "0.1.0"
description = "Semi-automatic rule based editing of Python code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyrefly>=0.46.0",
    "pyright>=1.1.407",
    "ty>=0.0.8",
    "typing-extensions>=4.15.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pyright>=1.1.407",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]

[tool.ruff]
line-length = 88
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty.src]
# Remove `build` from the excluded directories.
exclude = ["test/sample_code.out.py"]
