[project]
name = "fixo"
version = "0.3.0"
description = "🔧 Semi-automatic rule based editing of Python code 🔧"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyrefly>=0.46.0",
    "pyright>=1.1.407",
    "ty>=0.0.8",
    "typing-extensions>=4.15.0",
]
classifiers = ["Programming Language :: Python :: 3", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: 3.14"]

[dependency-groups]
dev = [
    "coverage>=7.13.2",
    "pyright>=1.1.407",
    "pytest>=8.4.2",
    "pyupgrade>=3.21.2",
    "ruff>=0.14.3",
    "ty>=0.0.8",
]

[tool.ruff]
line-length = 88
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty.src]
# Remove `build` from the excluded directories.
exclude = ["test/sample_code.out.py"]

[tool.coverage]
[tool.coverage.run]
branch = true

[tool.coverage.report]
skip_covered = true
exclude_lines = ["pragma: no cover", "if False:", "if __name__ == .__main__.:", "raise NotImplementedError"]

[tool.poetry]
name = "fixo"
version = "0.3.0"
description = "🔧 Semi-automatic rule based editing of Python code 🔧"
authors = ["Tom Ritchford <tom@swirly.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
